name:                julio
version:             0.1.0.0
synopsis:            Haskell meets Julia
description:         Julia DSL embedded in Haskell
homepage:            github.com/dmjio/julio
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  build-depends:
    base
  hs-source-dirs:
    src
  build-tools:
    hsc2hs
  exposed-modules:
    Julia
  include-dirs:
    /nix/store/z9qf3sv5247y54jijbpy22lxi6k8kx8s-julia-0.6.4/include/julia
  default-language:
    Haskell2010

executable main
  main-is:
    Main.hs
  hs-source-dirs:
    exe
  default-language:
    Haskell2010
  cc-options:
    -fPIC
  ld-options:
    -Wl,-rpath /nix/store/z9qf3sv5247y54jijbpy22lxi6k8kx8s-julia-0.6.4/lib
  build-depends:
    julio, base
  extra-libraries:
    julia
