name:                julio
version:             0.1.0.0
synopsis:            Haskell meets Julia
description:         Julia DSL embedded in Haskell
homepage:            github.com/dmjio/julio
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  build-depends:
    base
  hs-source-dirs:
    src
  exposed-modules:
    Julia
  extra-libraries:
    julia
  build-tools:
    hsc2hs
  default-language:
    Haskell2010

executable main
  main-is:
    Main.hs
  hs-source-dirs:
    exe
  default-language:
    Haskell2010
  build-depends:
    julio, base
